<resources>
    <string name="app_name">Connexus-Pink-Android</string>
    <string name="app_name_abbrev">Connexus</string>
    <string name="google_sign_in_text">Google Sign In</string>
    <string name="server_client_id">475475708929-6nr0btvi5lipfps5phgoe6rtd4bqcapa.apps.googleusercontent.com</string>

    <string name="title_text">Connexus!</string>

    <!-- Sign-in status messages -->
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="signed_in">Signed in</string>
    <string name="signing_in">Signing in…</string>
    <string name="signed_out">Signed out</string>
    <string name="signed_in_err">"Error: please check logs."</string>
    <string name="error_null_person">
        Error: Plus.PeopleApi.getCurrentPerson returned null. Ensure that the Google+ API is
        enabled for your project, you have a properly configured google-services.json file
        and that your device has an internet connection.
    </string>
    <string name="loading">Loading…</string>
    <string name="auth_code_fmt">Auth Code: %s</string>
    <string name="id_token_fmt">ID Token: %s</string>

    <!-- Google Play Services error for Toast -->
    <string name="play_services_error_fmt">Google Play Services Error: %i</string>

    <!-- Button labels -->
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>
    <string name="refresh_token">Get Fresh Token</string>

    <!-- Content Description for images -->
    <string name="desc_google_icon">Google Logo</string>

    <!-- Rationale for asking for Contacts -->
    <string name="contacts_permission_rationale">Contacts access is needed in order to retrieve your email address.</string>

    <!-- Activity Names and Descriptions -->
    <string name="name_sign_in_activity">SignInActivity</string>
    <string name="desc_sign_in_activity">Signing in, signing out, and revoking access.</string>
    <string name="desc_sign_in_activity_scopes">Signing in, signing out, and revoking access with Google Drive permissions.</string>

    <string name="name_id_token_activity">IdTokenActivity</string>
    <string name="desc_id_token_activity">Retrieving an ID Token for the user.</string>

    <string name="desc_auth_code_activity">Demonstrate retrieving an auth code for authorizing your server.</string>
    <string name="name_auth_code_activity">ServerAuthCodeActivity</string>

    <string name="desc_rest_activity">Demonstrate using Google Sign In with a Google REST API</string>
    <string name="name_rest_activity">RestApiActivity</string>

    <!-- Messages for the Rest API activity -->
    <string name="connections_fmt">Connections: %1$s</string>
    <string name="msg_contacts_failed">Get contacts failed.</string>

    <string name="view_streams_button_text">View Streams</string>
    <string name="sign_in_extra_text">The World\'s Greatest\nPhoto Sharing App (TM).\nBy APT Pink Team</string>
    <string name="view_all_title_text">Connexus</string>
    <string name="view_all_streams_text">Streams</string>
    <string name="view_all_search_text_hint">Search</string>
    <string name="view_all_nearby_button_text">Nearby</string>
    <string name="view_subscribed_stream_text">View Subscribed Streams</string>

    <!--Strings for Single Stream activity-->
    <string name="view_stream_text">Stream</string>
    <string name="upload_button_text">Upload</string>
    <string name="back_to_view_all_text">Streams</string>
    <string name="previous_images_button_text">Prev</string>
    <string name="next_images_button_text">Next</string>

    <!-- Camera Activity Strings  -->
    <string name="take_picture">Take Picture</string>
    <string name="use_picture">Use This Picture</string>

    <!-- Upload Activity Strings  -->
    <string name="upload_text_hint">Add a message and/or tags</string>
    <string name="stream_name_text">Stream: </string>
    <string name="choose_from_library_button_text">Choose from your library</string>
    <string name="use_camera_button_text">Use camera</string>

    <!-- Search Activity Strings  -->
    <string name="search_searchbox_text_hint">Search for Streams and Tags</string>

    <!--Nearby pictures-->
    <string name="nearby_pictures_text">Nearby pictures</string>
    <string name="nearby_more_button_text">More</string>

    <!-- Manage Activity Strings-->
    <string name="manage_owned_streams_tab">Owned Streams</string>
    <string name="manage_subscribed_streams_tab">Subscribed Streams</string>
</resources>
