<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/edge_padding"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.pink.apt.connexus_pink_android.activities.ViewAllStreamsActivity"
    tools:showIn="@layout/recycler_layout_stream">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/view_stream"
            android:paddingBottom="@dimen/edge_padding"
            android:text="@string/view_stream_text"
            android:textSize="@dimen/h1_text"/>

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:fillViewport="true"
            android:layout_below="@id/view_stream"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:id="@+id/nested_scroll_view_stream">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/imagegallery"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </android.support.v4.widget.NestedScrollView>

        <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/progress_bar_view_stream"
            android:layout_gravity="center_horizontal"
            android:layout_below="@id/view_stream"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/prev_button"
            android:layout_below="@id/nested_scroll_view_stream"
            android:paddingLeft="@dimen/edge_padding"
            android:paddingRight="@dimen/edge_padding"
            android:layout_alignParentStart="true"
            android:text="@string/previous_images_button_text"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/next_button"
            android:layout_below="@id/nested_scroll_view_stream"
            android:layout_alignParentEnd="true"
            android:text="@string/next_images_button_text"
            android:paddingLeft="@dimen/edge_padding"
            android:paddingRight="@dimen/edge_padding"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/upload_image"
            android:layout_below="@id/prev_button"
            android:layout_gravity="end"
            android:text="@string/upload_button_text"
            android:layout_centerHorizontal="true"
            android:paddingLeft="@dimen/edge_padding"
            android:paddingRight="@dimen/edge_padding"
            android:textSize="@dimen/h3_text"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back_to_view_all_text"
            android:id="@+id/camera_back_to_all_streams"
            android:layout_below="@id/upload_image"
            android:layout_centerHorizontal="true"
            android:paddingLeft="@dimen/edge_padding"
            android:paddingRight="@dimen/edge_padding"
            android:textSize="@dimen/h3_text"/>

    </RelativeLayout>


</android.support.v4.widget.NestedScrollView>
