<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/edge_padding"
    tools:context="com.pink.apt.connexus_pink_android.activities.NearbyActivity">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/nearby_title"
                android:layout_gravity="center_horizontal"
                android:text="@string/title_text"
                android:textSize="@dimen/h1_text"/>

            <android.support.v4.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fillViewport="true"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                android:id="@+id/nested_scroll_view_nearby">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/imagegallery_nearby"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </android.support.v4.widget.NestedScrollView>

            <ProgressBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/progress_bar_view_nearby"
                android:layout_gravity="center_horizontal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/nearby_pictures_text"
                    android:text="@string/nearby_pictures_text"
                    android:textSize="@dimen/h2_text"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nearby_more_button_text"
                    android:layout_gravity="end"
                    android:id="@+id/nearby_more_button"/>
            </LinearLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/nearby_view_all_streams_button"
                android:text="@string/view_all_streams_text"/>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</RelativeLayout>
